<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessLeaf,UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/register_imageView_1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/nlu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/register_editText_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/register_editText_1"
                android:inputType="text"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_imageView_1"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/register_editText_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/register_editText_2"
                android:inputType="number"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_editText_1"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/register_editText_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/register_editText_3"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_editText_2"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/register_editText_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/register_editText_4"
                android:inputType="text"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_editText_3"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/register_button_1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/register_button_1"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="@id/register_editText_4"
                app:layout_constraintTop_toBottomOf="@id/register_editText_4" />

            <TextView
                android:id="@+id/register_textView_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/register_textView_1"
                app:layout_constraintStart_toEndOf="@id/register_button_1"
                app:layout_constraintTop_toTopOf="@id/register_button_1" />

            <TextView
                android:id="@+id/register_textView_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/register_textView_2"
                app:layout_constraintStart_toStartOf="@id/register_button_1"
                app:layout_constraintTop_toBottomOf="@id/register_button_1" />

            <RadioGroup
                android:id="@+id/register_radioGroup_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toEndOf="@id/register_textView_2"
                app:layout_constraintTop_toBottomOf="@id/register_button_1">

                <RadioButton
                    android:id="@+id/register_radioButton_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_radioButton_1" />

                <RadioButton
                    android:id="@+id/register_radioButton_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/register_radioButton_2" />
            </RadioGroup>

            <AutoCompleteTextView
                android:id="@+id/register_autoCompleteTextView_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:completionThreshold="1"
                android:hint="@string/register_autoCompleteTextView_1"
                android:inputType="text"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_radioGroup_1" />

            <Button
                android:id="@+id/register_button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_button_2"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="@id/register_button_1"
                app:layout_constraintTop_toBottomOf="@id/register_autoCompleteTextView_1" />

            <Button
                android:id="@+id/register_button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_button_3"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@id/register_autoCompleteTextView_1"
                app:layout_constraintTop_toTopOf="@id/register_button_2" />
            
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/register_recyclerView_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintHeight_max="200dp"
                app:layout_constrainedHeight="true"
                app:layout_constraintTop_toBottomOf="@id/register_button_2"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_textView_3"
                android:id="@+id/register_textView_3"
                app:layout_constraintTop_toBottomOf="@id/register_recyclerView_1"
                app:layout_constraintStart_toStartOf="@id/register_button_2"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/register_checkBox_1"
                app:layout_constraintTop_toBottomOf="@id/register_textView_3"
                app:layout_constraintStart_toStartOf="@id/register_textView_3"
                android:text="@string/register_checkBox_1"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/register_checkBox_2"
                app:layout_constraintTop_toBottomOf="@id/register_checkBox_1"
                app:layout_constraintStart_toStartOf="@id/register_textView_3"
                android:text="@string/register_checkBox_2"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/register_checkBox_3"
                app:layout_constraintTop_toBottomOf="@id/register_checkBox_2"
                app:layout_constraintStart_toStartOf="@id/register_textView_3"
                android:text="@string/register_checkBox_3"/>

            <Button
                app:layout_constraintTop_toBottomOf="@id/register_checkBox_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_button_4"
                android:textAllCaps="false"
                android:id="@+id/register_button_4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="40dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>